<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CadastroFragment"
    android:background="@color/silver">

    <TextView
        android:id="@+id/tv_TituloCadastro"
        android:layout_width="match_parent"
        android:textSize="@dimen/fonte_16"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:text="@string/cadastro_de_informacoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_Nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/nome_e_sobrenome"
        android:layout_marginStart="@dimen/margem_16"
        android:layout_marginEnd="@dimen/margem_16"
        android:layout_marginBottom="@dimen/margem_16"
        android:inputType="text"
        android:textSize="@dimen/fonte_12"
        app:layout_constraintBottom_toTopOf="@id/et_HorasTrabalhadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_TituloCadastro" />

    <EditText
        android:id="@+id/et_HorasTrabalhadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_16"
        android:layout_marginEnd="@dimen/margem_16"
        android:hint="@string/horas_trabalhadas"
        android:inputType="number"
        android:textSize="@dimen/fonte_12"
        app:layout_constraintBottom_toTopOf="@id/et_ValorHora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_Nome"
        app:layout_goneMarginRight="@dimen/margem_16" />

    <EditText
        android:id="@+id/et_ValorHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_16"
        android:hint="@string/valor_por_hora"
        android:inputType="numberDecimal"
        android:textSize="@dimen/fonte_12"
        app:layout_constraintBottom_toTopOf="@id/btn_CalcularSalario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_HorasTrabalhadas" />

    <Button
        android:id="@+id/btn_CalcularSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margem_16"
        android:layout_marginRight="@dimen/margem_16"
        android:layout_marginTop="64dp"
        android:text="@string/btn_calcular_salario"
        android:textAllCaps="true"
        android:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_ValorHora" />

</androidx.constraintlayout.widget.ConstraintLayout>